Добавил тесты. Исправил запись одного человека в один день. Протестировал приложение